--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav {
     max-width: 500px;
     min-width: 200px;
     float: right;
+    margin-top: 20px;
 }
 nav > img {
     size: 50px;
@@ -37,25 +38,18 @@ nav > img {
     margin-top: -350px;
 }
 a {
+    font-size: small;
     background-color: rgb(173, 7, 137);
-    float: right;
     color: white;
     text-decoration: none;
-    padding: 70px;
-    margin: 10px 1px;
-    border-radius: 0px 0px 5px 5px;
+    padding: 10px;
+    margin-left: 2px;
+    border-radius: 5px 5px;
 }
 a:hover {
     background-color: rgb(82, 7, 82);
 }
-#fale {
-    margin-top: -8px;
-    padding-left: 120px;
-    text-align: center;
-    margin-bottom: -20px;
-    border-radius: 0px 0px 20px 20px;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.493);
-}
+ 
 main {
     background-color: rgb(116, 50, 101);
     max-width: 800px;
@@ -94,7 +88,7 @@ p {
 p#botao {
     float: left;
     padding: 10px;
-    margin: 5px;
+    margin: px;
 }
 footer {
     color: yellow;
